cluster/apps/jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett-svc
  labels:
    app.kubernetes.io/name: jackett
spec:
  selector:
    app.kubernetes.io/name: jackett
  ports:
    - name: http
      protocol: TCP
      port: 9117
      targetPort: jackett-port
  type: ClusterIP
